crates/rumps-query/snapshots/scripts__22_unary_ops.snap
---
source: crates/rumps-query/tests/scripts.rs
assertion_line: 37
description: "; Test: unary operators\n; Tests negation and logical NOT\n\n; === Numeric Negation ===\n\n; Negate integer\nOUTPUT -5\n; Expected: -5\n\nOUTPUT -0\n; Expected: 0\n\nOUTPUT -(-5)\n; Expected: 5\n\n; Negate float\nOUTPUT -3.14\n; Expected: -3.14\n\nOUTPUT -0.0\n; Expected: -0.0 (or 0.0)\n\nOUTPUT -(-2.5)\n; Expected: 2.5\n\n; Negate variable\nLET x = 42\nOUTPUT -x\n; Expected: -42\n\nLET y = -10\nOUTPUT -y\n; Expected: 10\n\n; Negate expression\nOUTPUT -(5 + 3)\n; Expected: -8\n\nOUTPUT -(10 - 15)\n; Expected: 5\n\n; Negate in larger expression\nOUTPUT 10 + -3\n; Expected: 7\n\nOUTPUT 10 - -5\n; Expected: 15\n\nOUTPUT -5 * 2\n; Expected: -10\n\nOUTPUT -5 * -2\n; Expected: 10\n\n; === Logical NOT ===\n\nOUTPUT NOT TRUE\n; Expected: FALSE\n\nOUTPUT NOT FALSE\n; Expected: TRUE\n\nOUTPUT !TRUE\n; Expected: FALSE\n\nOUTPUT !FALSE\n; Expected: TRUE\n\n; NOT with variable\nLET flag = TRUE\nOUTPUT NOT flag\n; Expected: FALSE\n\nOUTPUT !flag\n; Expected: FALSE\n\n; Double NOT\nOUTPUT NOT NOT TRUE\n; Expected: TRUE\n\nOUTPUT !!FALSE\n; Expected: FALSE\n\n; NOT in expression\nOUTPUT NOT (5 > 10)\n; Expected: TRUE\n\nOUTPUT !(3 == 4)\n; Expected: TRUE\n\n; NOT with AND/OR\nOUTPUT NOT TRUE AND FALSE\n; Expected: FALSE (NOT binds tighter: (NOT TRUE) AND FALSE = FALSE AND FALSE)\n\nOUTPUT NOT (TRUE AND FALSE)\n; Expected: TRUE (NOT applied to result: NOT FALSE = TRUE)\n\nOUTPUT NOT FALSE OR TRUE\n; Expected: TRUE ((NOT FALSE) OR TRUE = TRUE OR TRUE)\n\nOUTPUT \"Unary ops test complete\"\n"
---
-5
0
5
-3.14
-0
2.5
-42
10
-8
5
7
15
-10
10
FALSE
TRUE
FALSE
TRUE
FALSE
FALSE
TRUE
FALSE
TRUE
TRUE
FALSE
TRUE
TRUE
Unary ops test complete
