crates/rumps-query/snapshots/scripts__230_missing_type_param_constraint_closure.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Closure with explicitly-declared `T` but missing `Numeric`.\n\nlet inc = [T](x: T) -> T => x + 1\n\nfun main() {\n  write inc(1)\n}\n"
---
ERROR: type parameter `T` requires `Numeric` constraint
