crates/rumps-query/snapshots/scripts__231_missing_type_param_constraint_mutual.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; `b` has an undeclared `Additive` on explicit `T`. The constraint\n; does NOT propagate to `a` (since `b`'s scheme won't include it),\n; so only `b` errors.\n\nfun a[T](x: T) -> T {\n  b(x)\n}\n\nfun b[T](x: T) -> T {\n  x + 1\n}\n\nfun main() {\n  write a(1)\n}\n"
---
ERROR: type parameter `T` requires `Numeric` constraint
type parameter `T` requires `Additive` constraint
