crates/rumps-query/snapshots/scripts__237_user_class_parameterized.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; User-defined parameterized class (class with type args).\n;\n; Defines `MyInto[T]` with a `convert` method and implements it\n; for distinct user types.\n\ntype Celsius = Celsius(Float)\ntype Fahrenheit = Fahrenheit(Float)\n\nclass MyInto[T] C {\n  fun convert(x: C) -> T\n}\n\nclass MyInto[Fahrenheit] for Celsius {\n  fun convert(x: Celsius) -> Fahrenheit {\n    match x {\n      Celsius.Celsius(c) => { Fahrenheit.Fahrenheit(c * 1.8 + 32.0) }\n    }\n  }\n}\n\nclass MyInto[Celsius] for Fahrenheit {\n  fun convert(x: Fahrenheit) -> Celsius {\n    match x {\n      Fahrenheit.Fahrenheit(f) => { Celsius.Celsius((f - 32.0) / 1.8) }\n    }\n  }\n}\n\nfun main() {\n  let c = Celsius.Celsius(100.0)\n  let f = MyInto:convert(c)\n  write f\n  let back = MyInto:convert(f)\n  write back\n}\n"
---
Fahrenheit.Fahrenheit(212.0)
Celsius.Celsius(100.0)
