crates/rumps-query/snapshots/scripts__238_user_class_hkt.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; User-defined HKT class (higher-kinded type variable).\n;\n; Defines `MyFunctor` where the self var `F` is applied as `F[T]`,\n; making it kind `* -> *`.\n\ntype Box[T] = Box(T)\n\nclass MyFunctor F {\n  fun fmap[A, B](x: F[A], f: (A) -> B) -> F[B]\n}\n\nclass MyFunctor for Box {\n  fun fmap(x: Box[A], f: (A) -> B) -> Box[B] {\n    match x {\n      Box.Box(v) => { Box.Box(f(v)) }\n    }\n  }\n}\n\nfun main() {\n  let b = Box.Box(10)\n  let b2 = MyFunctor:fmap(b, x => x * 2)\n  write b2\n  let b3 = MyFunctor:fmap(b2, x => \"{x}!\")\n  write b3\n}\n"
---
Box.Box(20)
Box.Box("20!")
