crates/rumps-query/snapshots/scripts__239_user_class_duplicate_builtin_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Error: defining a class with a name that conflicts with a builtin class.\n\nclass Into[T] C {\n  fun convert(x: C) -> T\n}\n\nfun main() {}\n"
---
ERROR: 76..120: duplicate class definition `Into`
